--- a/public/bookingpage.html
+++ b/public/bookingpage.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MUZIK</title>
-
+    <title>MUZIK-Watch The Most Magnificant Event You Never Have</title>
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <!-- Simple Mail Transfer Protocol -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="icon.png">
+    <link rel="icon" type="image/x-icon" href="photos/icon.png">
     <!-- CSS -->
-    <link rel="stylesheet" href="bookingstyle.css">
+    <link rel="stylesheet" href="css/bookingPage.css">
 
     <!-- Font Awesome -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/bookingstyle.css">
+  <!-- <link rel="stylesheet" href="css/lpstyle.css"> -->
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,21 +29,69 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body style="background-image:url('concert1.jpg');" onload="myloader()">
-  <div id="loader"></div>
-  
-  <div class="event-box">
-    <div class="box1">
-      <img src="rock-and-roll.png">
+<body >
+
+    <div id="loader"></div>
+    <!-- NavBar -->
+    <div class="Nav-bar">
+    <span class="brand-name">Muzik</span>  
+    
+        <div class="nav-bar-options">
+             <!-- <a href="events.html" class="navbar-tags">Movies</a>
+            <a href="events.html" class="navbar-tags">Concert</a>
+            <a href="events.html" class="navbar-tags">Drama</a>
+           <a href="events.html" class="navbar-tags">Sports</a>  -->
+
+           <span class="nav-bar-greeting" id="nav-bar-greeting"></span>
+        </div>  
+    
+        <a href="userProfile.html" class="my-profile">My Profile</a>
     </div>
 
-    <div class="box2">
-      <span class="event-name">Sunburn</span>
-      <span class="dates">24th Feb to 26th Feb</span>
-      <span class="Venue">Four Points By Sheraton,Mahabalipuram</span>
+    <!-- Main Section-->
+<section class="main">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="photos/sports.jpg" alt="Card image cap">
+            <!-- <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div> -->
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="card-body">
+          <h5 class="title card-content">Manchester United vs Liverpool</h5>
+          <p class="description card-content">Experience The Greatest English Team Manchester United take on Loserpool at the Old Trafford</p>
+          <p class="venue card-content">Venue : Old Trafford</p>
+          <p class="price card-content">Price : 500</p>
+          <button type="button" class="btn btn-warning minus" onclick="minus()">-</button>
+          <div class="number-of-ticket">0</div>
+          <button type="button" class="btn btn-warning plus" onclick="plus()">+</button><br>
+          <button type="button" class="btn btn-success btn-lg book-tickets card-content">Book Tickets</button>
+        </div>
+        </div>
+      </div>
     </div>
-  </div>
-  <script src="index.js" type="text/javscript"></script>
+
+  </section>
+    <!-- Footer Section -->
+<footer id="footer">
+  <div class="footer-box">
+    <a href="#" class="fab fa-twitter fa-2x footer-icons"></a>
+    <a href="#" class="fab fa-facebook fa-2x footer-icons"></a>
+    <a href="#" class="fab fa-instagram fa-2x footer-icons"></a>
+    <a href="#" class="fas fa-envelope fa-2x footer-icons"></a>
+    <p class="copyright"></p>
+    </div>
+</footer>
+
+<script src="js/bookingPage.js" type="text/javascript"></script>
+<!-- Bootstrap Plugins -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
-
 </html>
