--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
            <span class="motivation-quotes" id="motivation-quotes"></span>
         </div>  
-    
+        <a href="aboutus.html" class="aboutus">About Us</a>
         <a href="signin.html" class="login">Login</a>
     </div>
 
@@ -87,13 +87,13 @@
   <div class="form-div">
     <form action="/" method="POST" class="form">
         <div class="input">
-            <input type="text" class="input_field" name="fname" placeholder="Full Name" required />
+            <input type="text" class="input_field" name="fname" placeholder="Full Name" autocomplete="off" required />
         </div>
         <div class="input">
-            <input type="email" class="input_field" name="email" placeholder="Email" required />
+            <input type="email" class="input_field" name="email" placeholder="Email" autocomplete="off" required />
         </div>
         <div class="input">
-            <input type="number" class="input_field" name="pno" placeholder="Phone Number"  />
+            <input type="number" class="input_field" name="pno" placeholder="Phone Number"  autocomplete="off"/>
         </div>
 
         <button type="submit" class="card_button" >Send</button>
