--- a/public/events.html
+++ b/public/events.html
@@ -56,7 +56,7 @@
                       <h5 class="card-title" name="title">Zakir Khan</h5>
                       <p class="card-text" name="price">Price - 500rs</p>
                       <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                      <a href="#" class="btn btn-dark" >Book Tickets</a>
+                      <a href="bookingpageevents.html" class="btn btn-dark" >Book Tickets</a>
                     </div>
                   </div>
               </div>
@@ -67,7 +67,7 @@
                       <h5 class="card-title" name="title">Zakir Khan</h5>
                       <p class="card-text" name="price">Price - 500rs</p>
                       <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                        <a href="#" class="btn btn-dark">Book Tickets</a>
+                        <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                     </div>
                   </div>
               </div>
@@ -78,7 +78,7 @@
                       <h5 class="card-title" name="title">Zakir Khan</h5>
                       <p class="card-text" name="price">Price - 500rs</p>
                       <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                        <a href="#" class="btn btn-dark">Book Tickets</a>
+                        <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                     </div>
                   </div> 
               </div>
@@ -89,7 +89,7 @@
                       <h5 class="card-title" name="title">Zakir Khan</h5>
                       <p class="card-text" name="price">Price - 500rs</p>
                       <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                        <a href="#" class="btn btn-dark">Book Tickets</a>
+                        <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                     </div>
                   </div>
               </div>
@@ -103,7 +103,7 @@
                         <h5 class="card-title" name="title">Zakir Khan</h5>
                         <p class="card-text" name="price">Price - 500rs</p>
                         <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                        <a href="#" class="btn btn-dark">Book Tickets</a>
+                        <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                       </div>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                         <h5 class="card-title" name="title">Zakir Khan</h5>
                         <p class="card-text" name="price">Price - 500rs</p>
                         <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                          <a href="#" class="btn btn-dark">Book Tickets</a>
+                          <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                       </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                         <h5 class="card-title" name="title">Zakir Khan</h5>
                         <p class="card-text" name="price">Price - 500rs</p>
                         <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                          <a href="#" class="btn btn-dark">Book Tickets</a>
+                          <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                       </div>
                     </div> 
                 </div>
@@ -136,7 +136,7 @@
                         <h5 class="card-title" name="title">Zakir Khan</h5>
                         <p class="card-text" name="price">Price - 500rs</p>
                         <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                          <a href="#" class="btn btn-dark">Book Tickets</a>
+                          <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                       </div>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                         <h5 class="card-title" name="title">Zakir Khan</h5>
                         <p class="card-text" name="price">Price - 500rs</p>
                         <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                        <a href="#" class="btn btn-dark">Book Tickets</a>
+                        <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                       </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                         <h5 class="card-title" name="title">Zakir Khan</h5>
                         <p class="card-text" name="price">Price - 500rs</p>
                         <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                          <a href="#" class="btn btn-dark">Book Tickets</a>
+                          <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                       </div>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                         <h5 class="card-title" name="title">Zakir Khan</h5>
                         <p class="card-text" name="price">Price - 500rs</p>
                         <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                          <a href="#" class="btn btn-dark">Book Tickets</a>
+                          <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                       </div>
                     </div> 
                 </div>
@@ -183,7 +183,7 @@
                         <h5 class="card-title" name="title">Zakir Khan</h5>
                         <p class="card-text" name="price">Price - 500rs</p>
                         <p class="card-text" name="venue">Venue - Ashok Nagar,Chennai</p>
-                          <a href="#" class="btn btn-dark">Book Tickets</a>
+                          <a href="bookingpageevents.html" class="btn btn-dark">Book Tickets</a>
                       </div>
                     </div>
                 </div>
